# indi-rec-ia-agent

./: .gitignore  README.md  azure-pipelines.yml  function_app.py  host.json  pyproject.toml  requirements.txt
src/ai/: builder.py  llm.py  main.py  memory.py  refusal.py
src/ai/tools/: creditor_schemas.py  creditor_tools.py  registry.py
src/api/controllers/agent/: query.py
src/api/controllers/memory/: sync_clients.py  sync_collections.py
src/api/controllers/queue/: queue_payment_sheet.py
src/channels/: channel.py  factory.py  jelou.py
src/config/: airtable_config.py  auth_config.py  collection_config.py  sql_server_config.py
src/domain/models/: acreetor.py  chat_message.py  client.py  collection.py  collection_register.py  conversation.py  enterprise.py  message.py  payload.py  user.py
src/domain/repositories/: messages.py
src/domain/services/: aggregator.py  clients.py  collections.py  conversation.py  messages.py  processor.py  service_bus.py  users.py
src/integrations/: data_provider.py  factory.py
src/integrations/indi/: provider.py
src/utils/: logger.py
src/utils/date/: date_utils.py
src/utils/ocr/: doc_int.py  files_utils.py  image_utils.py  ocr.py
src/utils/requests/: formater.py
src/utils/storage/: storage_azure.py
src/utils/tools/: util.py
